@@ -1,6 +1,8 @@
 Version 0.43.0 (In Progress)
 
-  * added -v options to losf and update utilities to provide versioning info
+  * require user to provide a valid configuration path (set via
+    LOSF_CONFIG_DIR environment variable or config/config_dir file)
+  * added -v options to losf and update command-line utilities to provide versioning info
   * addition of "losf sync" command which synchronizes host provisioning config with Cobbler
   * addition of "losf reinsert [host]" (a convenience command to perform del/add combinations)
   * example top-level LosF config file provided in config/config.machines.example
